--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-fastapi==0.95.1
-pydantic==1.10.2
-torch==2.0.1
-transformers==4.31.0
-uvicorn==0.22.0
-streamlit==1.25.0
-requests==2.31.0
+flask
+transformers
+flasgger
+torch
+dash
+time
+collections
+streamlit
+requests
